fixed overflow issue in small screens

--- a/style.css
+++ b/style.css
@@ -19,37 +19,23 @@ body::before{
 }
 body {
   overflow-x: hidden;
+  padding: 0;
+  margin: 0;
+}
+#image{
+  width: 50%;
 }
 
-.bg-dark.text-center.p-5.p-lg-0.pt-lg-5.text-light {
-  padding-bottom: 0;
+
+
+section {
+  overflow-x: hidden;
+  padding: 0;
+  margin: 0;
 }
 
-.container#home-section {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-@media (max-width: 767px) {
-  .bg-dark.text-center.p-5.p-lg-0.pt-lg-5.text-light {
-    padding-top: 2rem; /* Adjust as needed for mobile screens */
-  }
-
-  .container#home-section {
-    padding-left: 2px; /* Adjust as needed for mobile screens */
-    padding-right: 2px; /* Adjust as needed for mobile screens */
-  }
-}
-
-@media (max-width: 428px) {
-  .bg-dark.text-center.p-5.p-lg-0.pt-lg-5.text-light {
-    padding-top: 1rem; /* Adjust as needed for smaller screens */
-  }
-
-  .container#home-section {
-    padding-left: 1px; /* Adjust as needed for smaller screens */
-    padding-right: 1px; /* Adjust as needed for smaller screens */
-  }
+#image {
+  width: 50%;
 }
 
 
